removing mat tab from the component

--- a/src/app/modules/analysis/analysis.component.html
+++ b/src/app/modules/analysis/analysis.component.html
@@ -2,197 +2,191 @@
 
 <div class="container" *ngIf="showMain">
 
-  <mat-tab-group mat-align-tabs="center" *ngIf="showTab">
-    <mat-tab label="کوتاه مدت">
-      <div class="row article_box" dir="rtl">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-12 title">
-          <h1>
-            تحلیل کوتاه مدت
-            <a href="/analysis/short">مشاهده بیشتر</a>
-          </h1>
-        </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/analysis/short/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </div>
+  <div class="row article_box" dir="rtl">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-12 title">
+      <h1>
+        تحلیل کوتاه مدت
+        <a href="/analysis/short">مشاهده بیشتر</a>
+      </h1>
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/analysis/short/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+        </mat-card>
+      </a>
+    </div>
 
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/analysis/short/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </div>
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/analysis/short/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+        </mat-card>
+      </a>
+    </div>
 
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/analysis/short/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </div>
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/analysis/short/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+        </mat-card>
+      </a>
+    </div>
 
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/analysis/short/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </div>
-      </div>
-    </mat-tab>
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/analysis/short/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+        </mat-card>
+      </a>
+    </div>
+  </div>
 
-    <mat-tab label="میان مدت">
-      <div class="row article_box" dir="rtl">
-        <div class="col-lg-12 title">
-          <h1>
-            تحلیل میان مدت
-            <a href="/analysis/medium">مشاهده بیشتر</a>
-          </h1>
-        </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/analysis/medium/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </div>
+  <div class="row article_box" dir="rtl">
+    <div class="col-lg-12 title">
+      <h1>
+        تحلیل میان مدت
+        <a href="/analysis/medium">مشاهده بیشتر</a>
+      </h1>
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/analysis/medium/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+        </mat-card>
+      </a>
+    </div>
 
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/analysis/medium/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </div>
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/analysis/medium/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+        </mat-card>
+      </a>
+    </div>
 
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/analysis/medium/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </div>
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/analysis/medium/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+        </mat-card>
+      </a>
+    </div>
 
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/analysis/medium/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </div>
-      </div>
-    </mat-tab>
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/analysis/medium/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+        </mat-card>
+      </a>
+    </div>
+  </div>
 
-    <mat-tab label="بلند مدت">
-      <div class="row video_box" dir="rtl">
-        <div class="col-lg-12 title">
-          <h1>
-            تحلیل بلند مدت
-            <a href="/analysis/long">مشاهده بیشتر</a>
-          </h1>
-        </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/analysis/long/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </div>
+  <div class="row video_box" dir="rtl">
+    <div class="col-lg-12 title">
+      <h1>
+        تحلیل بلند مدت
+        <a href="/analysis/long">مشاهده بیشتر</a>
+      </h1>
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/analysis/long/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+        </mat-card>
+      </a>
+    </div>
 
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/analysis/long/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </div>
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/analysis/long/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+        </mat-card>
+      </a>
+    </div>
 
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/analysis/long/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </div>
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/analysis/long/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+        </mat-card>
+      </a>
+    </div>
 
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-          <a href="/analysis/long/id">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <mat-card-content>
-                <a class="little_desc">
-                  The Shiba Inu is the smallest of the six original and
-                </a>
-              </mat-card-content>
-            </mat-card>
-          </a>
-        </div>
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/analysis/long/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+        </mat-card>
+      </a>
+    </div>
 
-      </div>
-    </mat-tab>
-  </mat-tab-group>
+  </div>
+</div>
 
 
-  <div class="row article_box" dir="rtl" *ngIf="showShort">
+<div class="container" *ngIf="showShort">
+  <div class="row article_box" dir="rtl">
     <div class="col-lg-12 title">
       <h1>تحلیل های کوتاه مدت</h1>
     </div>
@@ -248,8 +242,10 @@
       </a>
     </div>
   </div>
+</div>
 
-  <div class="row video_box" dir="rtl" *ngIf="showMedium">
+<div class="container" *ngIf="showMedium">
+  <div class="row video_box" dir="rtl">
     <div class="col-lg-12 title">
       <h1>تحلیل های میان مدت</h1>
     </div>
@@ -305,8 +301,10 @@
       </a>
     </div>
   </div>
+</div>
 
-  <div class="row news_box" dir="rtl" *ngIf="showLong">
+<div class="container" *ngIf="showLong">
+  <div class="row news_box" dir="rtl">
     <div class="col-lg-12 title">
       <h1>تحلیل های بلند مدت</h1>
     </div>
