--- a/src/app/layouts/admin/admin.component.html
+++ b/src/app/layouts/admin/admin.component.html
@@ -3,7 +3,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-lg-12">
-      <mat-drawer-container dir="rtl">
+      <mat-drawer-container autosize dir="rtl">
 
         <mat-drawer mode="side" [opened]="sideBarOpen">
 
