--- a/src/app/modules/analysis/analysis.component.html
+++ b/src/app/modules/analysis/analysis.component.html
@@ -62,6 +62,8 @@
     </div>
   </div>
 
+  <mat-divider style="margin-top:5%"></mat-divider>
+
   <div class="row article_box" dir="rtl">
     <div class="col-lg-12 title">
       <h1>
@@ -121,6 +123,8 @@
       </a>
     </div>
   </div>
+
+  <mat-divider style="margin-top:5%"></mat-divider>
 
   <div class="row video_box" dir="rtl">
     <div class="col-lg-12 title">
