--- a/src/app/modules/register/register.component.html
+++ b/src/app/modules/register/register.component.html
@@ -15,7 +15,7 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-12">
               <mat-form-field class="example-full-width">
                 <mat-label>موبایل</mat-label>
-                <input matInput type="text" [(ngModel)]="name" name="mobile" placeholder="شماره موبایل خود را وارد نمایید">
+                <input matInput type="text" [(ngModel)]="mobile" name="mobile" placeholder="شماره موبایل خود را وارد نمایید">
               </mat-form-field>
             </div>
 
@@ -24,27 +24,27 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-12">
               <mat-form-field class="example-full-width">
                 <mat-label>پسورد</mat-label>
-                <input matInput type="password" placeholder="پسورد خود را وارد نمایید">
+                <input matInput type="password" [(ngModel)]="password" name="password" placeholder="پسورد خود را وارد نمایید">
               </mat-form-field>
             </div>
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-12">
               <mat-form-field class="example-full-width">
                 <mat-label>تکرار پسورد</mat-label>
-                <input matInput type="password" placeholder="پسورد خود را تکرار کنید">
+                <input matInput type="password" [(ngModel)]="conf_password" name="confirm" placeholder="پسورد خود را تکرار کنید">
               </mat-form-field>
             </div>
 
             <div class="col-lg-6 col-md-6 col-sm-6 col-6">
               <mat-form-field class="example-half-width">
                 <mat-label>کدامنیتی</mat-label>
-                <input matInput type="text" placeholder="کد را وارد نمایید">
+                <input matInput type="text" [(ngModel)]="captcha" name="captcha" placeholder="کد را وارد نمایید">
               </mat-form-field>
             </div>
 
             <div class="col-lg-6 col-md-6 col-sm-6 col-6">
               <div class="captcha_image">
-                <img src="../../../assets/rick_7680x4320_xtrafondos.com.jpg" alt="">
+                <img style="border: 1px solid black;" src="data:image/png;base64,{{captcha_image}}" alt="">
               </div>
             </div>
 
