adding some small changes

--- a/src/app/modules/home-page/home-page.component.html
+++ b/src/app/modules/home-page/home-page.component.html
@@ -151,47 +151,55 @@
     </div>
 
     <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-      <mat-card class="example-card">
-        <img class="video_image" mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-        <mat-card-content>
-          <p>
-            The Shiba Inu is the smallest of the six original and
-          </p>
-        </mat-card-content>
-      </mat-card>
+      <a href="/analysis/short/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <p>
+              The Shiba Inu is the smallest of the six original and
+            </p>
+          </mat-card-content>
+        </mat-card>
+      </a>
     </div>
 
     <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-      <mat-card class="example-card">
-        <img class="video_image" mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-        <mat-card-content>
-          <p>
-            The Shiba Inu is the smallest of the six original and
-          </p>
-        </mat-card-content>
-      </mat-card>
+      <a href="/analysis/short/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <p>
+              The Shiba Inu is the smallest of the six original and
+            </p>
+          </mat-card-content>
+        </mat-card>
+      </a>
     </div>
 
     <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-      <mat-card class="example-card">
-        <img class="video_image" mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-        <mat-card-content>
-          <p>
-            The Shiba Inu is the smallest of the six original and
-          </p>
-        </mat-card-content>
-      </mat-card>
+      <a href="/analysis/short/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <p>
+              The Shiba Inu is the smallest of the six original and
+            </p>
+          </mat-card-content>
+        </mat-card>
+      </a>
     </div>
 
     <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-      <mat-card class="example-card">
-        <img class="video_image" mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-        <mat-card-content>
-          <p>
-            The Shiba Inu is the smallest of the six original and
-          </p>
-        </mat-card-content>
-      </mat-card>
+      <a href="/analysis/short/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <p>
+              The Shiba Inu is the smallest of the six original and
+            </p>
+          </mat-card-content>
+        </mat-card>
+      </a>
     </div>
 
   </div>
