--- a/src/app/modules/home-page/home-page.component.scss
+++ b/src/app/modules/home-page/home-page.component.scss
@@ -113,6 +113,11 @@ h2 {
     margin-right: 77%;
     font-size: 20px;
   }
+
+  a {
+    text-decoration: none;
+  }
+
   .example-card{
     margin-bottom: 5%;
   }
