adding new element tot side nav

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <mat-nav-list>
 
-  <h2 matSubheader>صفحات</h2>
+  <h2 matSubheader style="font-family: 'BKoodakBold';font-size: 20px;" >صفحات</h2>
 
   <mat-accordion>
     <mat-expansion-panel>
@@ -29,10 +29,24 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <a href="/admin/learn/post">
+      <a href="/admin/learn/post/film">
         <button mat-button>
           <mat-icon>add</mat-icon>
-          اضافه کردن آموزش
+          اضافه کردن ویدئو
+        </button>
+      </a>
+
+      <a href="/admin/learn/post/file">
+        <button mat-button>
+          <mat-icon>add</mat-icon>
+          اضافه کردن فایل
+        </button>
+      </a>
+
+      <a href="/admin/learn/post/article">
+        <button mat-button>
+          <mat-icon>add</mat-icon>
+          اضافه کردن مقاله
         </button>
       </a>
 
