changing learn detail component

--- a/src/app/modules/home-page/home-page.component.html
+++ b/src/app/modules/home-page/home-page.component.html
@@ -11,7 +11,7 @@
       </h1>
       <mat-card class="main-news">
         <a href="/news/1">
-          <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <img src="../../../assets/528629_169.jpg" alt="Photo of a Shiba Inu">
         </a>
         <mat-card-content>
           <p>
@@ -222,7 +222,7 @@
 
       <mat-card class="main-news">
         <a href="/learn/article/id">
-          <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <img src="../../../assets/461621_640.jpg" alt="Photo of a Shiba Inu">
         </a>
         <mat-card-content>
           <p>
