--- a/src/app/modules/learn/learn.component.scss
+++ b/src/app/modules/learn/learn.component.scss
@@ -2,8 +2,22 @@
   font-family: "BKoodakBold";
 }
 
+h1{
+  font-size: 20px;
+  text-align: right;
+  font-family: "BKoodakBold";
+}
+
+.container {
+  margin-top: 0%;
+  .row {
+    margin-top: 0%;
+
+  }
+}
+
 .content_box {
-  margin-top: 5%;
+  margin-top: 3%;
   h1{
     font-size: 30px;
     text-align: right;
@@ -30,34 +44,25 @@
       text-align: right;
     }
   }
-
-  iframe {
-    width: 100%;
-    height: 400px;
-  }
 }
 
 .sub_menu {
-  margin-top: 3%;
+  .sticky-top {
+    width: 100%;
+    margin-top: 10%;
+    padding-top: 3%;
+    h1 img{
+      width: 30px;
+      height: 30px;
+    }
+  }
+
   .example-card {
     margin-bottom: 5%;
     img {
       max-width: 400px;
-      height: 170px;
+      height: 200px;
     }
-    .play_icon img {
-      position: absolute;
-      left: 40%;
-      top: 25%;
-      width: 50px;
-      height: 50px;
-    }
-
-    .play_icon img:hover {
-      width: 55px;
-      height: 55px;
-    }
-
     mat-card-content {
       span {
         padding-left: 10%;
@@ -84,9 +89,78 @@
   }
 }
 
+.opinion{
+  margin-top: 3%;
+  .opinion_card{
+    padding-bottom: 4%;
+  }
+  h1 img {
+    width: 40px;
+    height: 40px;
+  }
+  .example-form {
+    width: 100%;
+    .input_name, .input_email {
+      float: right;
+      width: 40%;
+    }
+
+    .input_email {
+      margin-right: 5%;
+    }
+
+    .text_area{
+      width: 100%;
+      padding-left: 15%;
+    }
+
+    button{
+      width: 15%;
+      margin-left: 15%;
+    }
+  }
+}
+
+.learn_list {
+  .sticky-top {
+    margin-top: 5%;
+    h1 img {
+      width: 40px;
+      height: 40px;
+    }
+  }
+  mat-list {
+    margin-left: 5%;
+    box-shadow: 5px 10px 18px #b9b8b8;
+    height: 360px;
+    background-color: white;
+    mat-divider{
+      width: 90%;
+      margin-right: 5%;
+    }
+    mat-list-item {
+      height: 70px;
+      a {
+        text-decoration: none;
+        color: black;
+      }
+
+      a:hover {
+        color: rgb(5, 128, 199);
+      }
+    }
+  }
+}
+
+iframe {
+  width: 100%;
+  height: 300px;
+}
+
 @media screen and (max-width:820px) {
   .sub_menu {
     .example-card {
+      width: 109%;
       img {
         max-width: 400px;
         height: 250px;
@@ -98,11 +172,16 @@
       }
     }
   }
+
+  mat-list{
+    width: 100%;
+  }
 }
 
 @media screen and (max-width:576px) {
   .sub_menu {
     .example-card {
+      width: 110%;
       img {
         max-width: 400px;
         height: 250px;
@@ -119,7 +198,35 @@
     margin-top: 5%;
     img {
       width: 100%;
-      height: 250px;
+      height: 200px;
+    }
+  }
+
+  .opinion{
+    margin-top: 3%;
+    h1 img {
+      width: 40px;
+      height: 40px;
+    }
+    .example-form {
+      width: 100%;
+      .input_name, .input_email {
+        float: right;
+        width: 100%;
+      }
+
+      .input_email {
+        margin-right: 0%;
+      }
+
+      .text_area{
+        width: 100%;
+        padding-left: 0%;
+      }
+
+      button{
+        margin-left: 0%;
+      }
     }
   }
 }
