adding new routes for admin to routing and change new links in sidbar component and checkout the new routes in add post component

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -67,10 +67,17 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <a href="/admin/news/post">
+      <a href="/admin/news/post/article">
         <button mat-button>
           <mat-icon>add</mat-icon>
           اضافه کردن خبر
+        </button>
+      </a>
+
+      <a href="/admin/news/post/film">
+        <button mat-button>
+          <mat-icon>add</mat-icon>
+          اضافه کردن ویدئو
         </button>
       </a>
 
@@ -92,10 +99,17 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
 
-      <a href="/admin/analysis/post">
+      <a href="/admin/analysis/post/free">
         <button mat-button>
           <mat-icon>add</mat-icon>
-          اضافه کردن تحلیل
+          اضافه کردن تحلیل رایگان
+        </button>
+      </a>
+
+      <a href="/admin/analysis/post/monetary">
+        <button mat-button>
+          <mat-icon>add</mat-icon>
+          اضافه کردن تحلیل پولی
         </button>
       </a>
 
