--- a/src/app/modules/register/register.component.scss
+++ b/src/app/modules/register/register.component.scss
@@ -2,6 +2,16 @@
   font-family: "BKoodakBold";
 }
 
+.mat-simple-snackbar {
+  font-family: "BKoodakBold";
+  font-size: 17px;
+  display: inline-block !important;
+}
+
+.mat-snack-bar-container {
+  text-align: center;
+}
+
 .container {
   margin-top: 5%;
   margin-bottom: 5%;
