--- a/src/app/shared/components/login/login.component.scss
+++ b/src/app/shared/components/login/login.component.scss
@@ -2,6 +2,16 @@
   font-family: "BKoodakBold";
 }
 
+.mat-simple-snackbar {
+  font-family: "BKoodakBold";
+  font-size: 17px;
+  display: inline-block !important;
+}
+
+.mat-snack-bar-container {
+  text-align: center;
+}
+
 .container-fluid {
   // height: 350px;
   .title h1 {
