changing dashboard in sidenav

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -3,22 +3,11 @@
   <h2 matSubheader style="font-family: 'BKoodakBold';font-size: 20px;" >صفحات</h2>
 
   <mat-accordion>
-    <mat-expansion-panel>
-
-      <mat-expansion-panel-header>
-        <mat-panel-title>
-          داشبورد
-        </mat-panel-title>
-      </mat-expansion-panel-header>
-
         <a href="/admin">
-          <button mat-button>
-            <mat-icon>add</mat-icon>
-            درخواست ها
+          <button mat-button class="dashboard">
+            داشبورد
           </button>
         </a>
-
-    </mat-expansion-panel>
   </mat-accordion>
 
   <mat-accordion>
@@ -128,7 +117,7 @@
 
       <mat-expansion-panel-header>
         <mat-panel-title>
-          پیام ها
+          درخواست ها
         </mat-panel-title>
       </mat-expansion-panel-header>
 
