--- a/src/app/shared/components/sidebar/sidebar.component.scss
+++ b/src/app/shared/components/sidebar/sidebar.component.scss
@@ -2,6 +2,14 @@
   margin-left: 8px;
 }
 
+.dashboard {
+  width: 100%;
+  text-align: right;
+  padding: 5% 10% 5% 5%;
+  font-family: "BKoodakBold";
+  font-size: 17px;
+}
+
 mat-expansion-panel {
   padding: 2%;
   mat-panel-title{
