--- a/src/app/modules/add-post/add-post.component.scss
+++ b/src/app/modules/add-post/add-post.component.scss
@@ -7,9 +7,16 @@ h2 {
   text-align: right;
 }
 
-label {
+h3 {
   width: 100%;
   text-align: right;
+  font-family: "BKoodakBold";
+}
+
+button {
+  font-size: 17px;
+  float: right;
+  margin-top: 3%;
 }
 
 .image_pre {
