adding link to the list elements

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -39,7 +39,7 @@
         </button>
       </a>
 
-      <a>
+      <a href="/admin/learn/post/list">
         <button mat-button>
           <mat-icon>add</mat-icon>
           لیست اموزش ها
@@ -70,7 +70,7 @@
         </button>
       </a>
 
-      <a>
+      <a href="/admin/news/post/list">
         <button mat-button>
           <mat-icon>add</mat-icon>
           لیست خبر ها
@@ -102,7 +102,7 @@
         </button>
       </a>
 
-      <a>
+      <a  href="/admin/analysis/post/list">
         <button mat-button>
           <mat-icon>add</mat-icon>
           لیست تحلیل ها
