--- a/src/app/modules/list-items/list-items.component.html
+++ b/src/app/modules/list-items/list-items.component.html
@@ -1,1 +1,127 @@
-<p>list-items works!</p>
+<div class="container">
+  <div class="row" dir="rtl">
+    <div class="col-lg-12 title">
+      <h1>مجموعه عناوین</h1>
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/learn/article/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+          <button mat-raised-button color="warn">حذف</button>
+        </mat-card>
+      </a>
+    </div>
+
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/learn/article/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+          <button mat-raised-button color="warn">حذف</button>
+        </mat-card>
+      </a>
+    </div>
+
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/learn/article/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+          <button mat-raised-button color="warn">حذف</button>
+        </mat-card>
+      </a>
+    </div>
+
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/learn/article/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+          <button mat-raised-button color="warn">حذف</button>
+        </mat-card>
+      </a>
+    </div>
+  </div>
+</div>
+
+<mat-divider style="margin: 5% 0 5% 0;"></mat-divider>
+
+<div class="container">
+  <div class="row" dir="rtl">
+    <div class="col-lg-12 title">
+      <h1>مجموعه عناوین</h1>
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/learn/article/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+          <button mat-raised-button color="warn">حذف</button>
+        </mat-card>
+      </a>
+    </div>
+
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/learn/article/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+          <button mat-raised-button color="warn">حذف</button>
+        </mat-card>
+      </a>
+    </div>
+
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/learn/article/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+          <button mat-raised-button color="warn">حذف</button>
+        </mat-card>
+      </a>
+    </div>
+
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <a href="/learn/article/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <a class="little_desc">
+              The Shiba Inu is the smallest of the six original and
+            </a>
+          </mat-card-content>
+          <button mat-raised-button color="warn">حذف</button>
+        </mat-card>
+      </a>
+    </div>
+  </div>
+</div>
