--- a/src/app/modules/add-post/add-post.component.html
+++ b/src/app/modules/add-post/add-post.component.html
@@ -33,7 +33,7 @@
       </form>
     </div>
 
-    <div class="col-lg-12" *ngIf="postType == 'article' || Type == 'analysis'">
+    <div class="col-lg-12" *ngIf="postType == 'article' || Type == 'analysis' || isEdit">
       <h2>پست خود را ایجاد نمایید</h2>
       <div class="editor_box">
         <ckeditor
