--- a/src/app/modules/list-items/list-items.component.html
+++ b/src/app/modules/list-items/list-items.component.html
@@ -1,4 +1,6 @@
-<div class="container">
+<router-outlet></router-outlet>
+
+<div class="container" *ngIf="listDisplay">
   <div class="row" dir="rtl">
     <div class="col-lg-12 title">
       <h1>مجموعه عناوین</h1>
@@ -12,7 +14,14 @@
               The Shiba Inu is the smallest of the six original and
             </a>
           </mat-card-content>
-          <button mat-raised-button color="warn">حذف</button>
+          <a href="/admin/{{Type}}/post/list/edit/1">
+            <button mat-mini-fab color="primary" title="ویرایش">
+              <mat-icon>edit</mat-icon>
+            </button>
+          </a>
+          <button mat-mini-fab color="warn" title="حذف">
+            <mat-icon>delete_forever</mat-icon>
+          </button>
         </mat-card>
       </a>
     </div>
@@ -26,7 +35,14 @@
               The Shiba Inu is the smallest of the six original and
             </a>
           </mat-card-content>
-          <button mat-raised-button color="warn">حذف</button>
+          <a href="/admin/{{Type}}/post/list/edit/1">
+            <button mat-mini-fab color="primary">
+              <mat-icon>edit</mat-icon>
+            </button>
+          </a>
+          <button mat-mini-fab color="warn">
+            <mat-icon>delete_forever</mat-icon>
+          </button>
         </mat-card>
       </a>
     </div>
@@ -40,7 +56,14 @@
               The Shiba Inu is the smallest of the six original and
             </a>
           </mat-card-content>
-          <button mat-raised-button color="warn">حذف</button>
+          <a href="/admin/{{Type}}/post/list/edit/1">
+            <button mat-mini-fab color="primary">
+              <mat-icon>edit</mat-icon>
+            </button>
+          </a>
+          <button mat-mini-fab color="warn">
+            <mat-icon>delete_forever</mat-icon>
+          </button>
         </mat-card>
       </a>
     </div>
@@ -54,16 +77,23 @@
               The Shiba Inu is the smallest of the six original and
             </a>
           </mat-card-content>
-          <button mat-raised-button color="warn">حذف</button>
+          <a href="/admin/{{Type}}/post/list/edit/1">
+            <button mat-mini-fab color="primary">
+              <mat-icon>edit</mat-icon>
+            </button>
+          </a>
+          <button mat-mini-fab color="warn">
+            <mat-icon>delete_forever</mat-icon>
+          </button>
         </mat-card>
       </a>
     </div>
   </div>
 </div>
 
-<mat-divider style="margin: 5% 0 5% 0;"></mat-divider>
+<mat-divider style="margin: 5% 0 5% 0;" *ngIf="listDisplay"></mat-divider>
 
-<div class="container">
+<div class="container" *ngIf="listDisplay">
   <div class="row" dir="rtl">
     <div class="col-lg-12 title">
       <h1>مجموعه عناوین</h1>
@@ -77,7 +107,14 @@
               The Shiba Inu is the smallest of the six original and
             </a>
           </mat-card-content>
-          <button mat-raised-button color="warn">حذف</button>
+          <a href="/admin/{{Type}}/post/list/edit/1">
+            <button mat-mini-fab color="primary">
+              <mat-icon>edit</mat-icon>
+            </button>
+          </a>
+          <button mat-mini-fab color="warn">
+            <mat-icon>delete_forever</mat-icon>
+          </button>
         </mat-card>
       </a>
     </div>
@@ -91,7 +128,14 @@
               The Shiba Inu is the smallest of the six original and
             </a>
           </mat-card-content>
-          <button mat-raised-button color="warn">حذف</button>
+          <a href="/admin/{{Type}}/post/list/edit/1">
+            <button mat-mini-fab color="primary">
+              <mat-icon>edit</mat-icon>
+            </button>
+          </a>
+          <button mat-mini-fab color="warn">
+            <mat-icon>delete_forever</mat-icon>
+          </button>
         </mat-card>
       </a>
     </div>
@@ -105,7 +149,14 @@
               The Shiba Inu is the smallest of the six original and
             </a>
           </mat-card-content>
-          <button mat-raised-button color="warn">حذف</button>
+          <a href="/admin/{{Type}}/post/list/edit/1">
+            <button mat-mini-fab color="primary">
+              <mat-icon>edit</mat-icon>
+            </button>
+          </a>
+          <button mat-mini-fab color="warn">
+            <mat-icon>delete_forever</mat-icon>
+          </button>
         </mat-card>
       </a>
     </div>
@@ -119,7 +170,14 @@
               The Shiba Inu is the smallest of the six original and
             </a>
           </mat-card-content>
-          <button mat-raised-button color="warn">حذف</button>
+          <a href="/admin/{{Type}}/post/list/edit/1">
+            <button mat-mini-fab color="primary">
+              <mat-icon>edit</mat-icon>
+            </button>
+          </a>
+          <button mat-mini-fab color="warn">
+            <mat-icon>delete_forever</mat-icon>
+          </button>
         </mat-card>
       </a>
     </div>
