--- a/src/app/modules/list-items/list-items.component.html
+++ b/src/app/modules/list-items/list-items.component.html
@@ -19,7 +19,7 @@
               <mat-icon>edit</mat-icon>
             </button>
           </a>
-          <button mat-mini-fab color="warn" title="حذف">
+          <button mat-mini-fab color="warn" title="حذف" (click)="deletePost()">
             <mat-icon>delete_forever</mat-icon>
           </button>
         </mat-card>
@@ -40,7 +40,7 @@
               <mat-icon>edit</mat-icon>
             </button>
           </a>
-          <button mat-mini-fab color="warn">
+          <button mat-mini-fab color="warn" (click)="deletePost()">
             <mat-icon>delete_forever</mat-icon>
           </button>
         </mat-card>
@@ -61,7 +61,7 @@
               <mat-icon>edit</mat-icon>
             </button>
           </a>
-          <button mat-mini-fab color="warn">
+          <button mat-mini-fab color="warn" (click)="deletePost()">
             <mat-icon>delete_forever</mat-icon>
           </button>
         </mat-card>
@@ -82,7 +82,7 @@
               <mat-icon>edit</mat-icon>
             </button>
           </a>
-          <button mat-mini-fab color="warn">
+          <button mat-mini-fab color="warn" (click)="deletePost()">
             <mat-icon>delete_forever</mat-icon>
           </button>
         </mat-card>
@@ -112,7 +112,7 @@
               <mat-icon>edit</mat-icon>
             </button>
           </a>
-          <button mat-mini-fab color="warn">
+          <button mat-mini-fab color="warn" (click)="deletePost()">
             <mat-icon>delete_forever</mat-icon>
           </button>
         </mat-card>
@@ -133,7 +133,7 @@
               <mat-icon>edit</mat-icon>
             </button>
           </a>
-          <button mat-mini-fab color="warn">
+          <button mat-mini-fab color="warn" (click)="deletePost()">
             <mat-icon>delete_forever</mat-icon>
           </button>
         </mat-card>
@@ -154,7 +154,7 @@
               <mat-icon>edit</mat-icon>
             </button>
           </a>
-          <button mat-mini-fab color="warn">
+          <button mat-mini-fab color="warn" (click)="deletePost()">
             <mat-icon>delete_forever</mat-icon>
           </button>
         </mat-card>
@@ -175,7 +175,7 @@
               <mat-icon>edit</mat-icon>
             </button>
           </a>
-          <button mat-mini-fab color="warn">
+          <button mat-mini-fab color="warn" (click)="deletePost()">
             <mat-icon>delete_forever</mat-icon>
           </button>
         </mat-card>
