--- a/src/app/modules/list-items/list-items.component.html
+++ b/src/app/modules/list-items/list-items.component.html
@@ -5,181 +5,30 @@
     <div class="col-lg-12 title">
       <h1>مجموعه عناوین</h1>
     </div>
-    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-      <a href="/learn/article/id">
-        <mat-card class="example-card">
-          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-          <mat-card-content>
-            <a class="little_desc">
-              The Shiba Inu is the smallest of the six original and
-            </a>
-          </mat-card-content>
-          <a href="/admin/{{Type}}/post/list/edit/1">
-            <button mat-mini-fab color="primary" title="ویرایش">
-              <mat-icon>edit</mat-icon>
-            </button>
-          </a>
-          <button mat-mini-fab color="warn" title="حذف" (click)="deletePost()">
-            <mat-icon>delete_forever</mat-icon>
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12" *ngFor="let item of newsData">
+      <mat-card class="example-card">
+        <a href="/learn/article/{{item.id}}">
+          <img mat-card-image [src]="item.image" alt="Photo of a Shiba Inu">
+        </a>
+        <mat-card-content>
+          <h3>
+            {{item.title}}
+          </h3>
+          <p>
+            {{item.description}}
+          </p>
+        </mat-card-content>
+        <a href="/admin/{{Type}}/post/list/edit/{{item.id}}">
+          <button mat-mini-fab color="primary" title="ویرایش">
+            <mat-icon>edit</mat-icon>
           </button>
-        </mat-card>
-      </a>
+        </a>
+        <button mat-mini-fab color="warn" title="حذف" (click)="deletePost(item.id)">
+          <mat-icon>delete_forever</mat-icon>
+        </button>
+      </mat-card>
     </div>
 
-    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-      <a href="/learn/article/id">
-        <mat-card class="example-card">
-          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-          <mat-card-content>
-            <a class="little_desc">
-              The Shiba Inu is the smallest of the six original and
-            </a>
-          </mat-card-content>
-          <a href="/admin/{{Type}}/post/list/edit/1">
-            <button mat-mini-fab color="primary">
-              <mat-icon>edit</mat-icon>
-            </button>
-          </a>
-          <button mat-mini-fab color="warn" (click)="deletePost()">
-            <mat-icon>delete_forever</mat-icon>
-          </button>
-        </mat-card>
-      </a>
-    </div>
-
-    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-      <a href="/learn/article/id">
-        <mat-card class="example-card">
-          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-          <mat-card-content>
-            <a class="little_desc">
-              The Shiba Inu is the smallest of the six original and
-            </a>
-          </mat-card-content>
-          <a href="/admin/{{Type}}/post/list/edit/1">
-            <button mat-mini-fab color="primary">
-              <mat-icon>edit</mat-icon>
-            </button>
-          </a>
-          <button mat-mini-fab color="warn" (click)="deletePost()">
-            <mat-icon>delete_forever</mat-icon>
-          </button>
-        </mat-card>
-      </a>
-    </div>
-
-    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-      <a href="/learn/article/id">
-        <mat-card class="example-card">
-          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-          <mat-card-content>
-            <a class="little_desc">
-              The Shiba Inu is the smallest of the six original and
-            </a>
-          </mat-card-content>
-          <a href="/admin/{{Type}}/post/list/edit/1">
-            <button mat-mini-fab color="primary">
-              <mat-icon>edit</mat-icon>
-            </button>
-          </a>
-          <button mat-mini-fab color="warn" (click)="deletePost()">
-            <mat-icon>delete_forever</mat-icon>
-          </button>
-        </mat-card>
-      </a>
-    </div>
   </div>
 </div>
 
-<mat-divider style="margin: 5% 0 5% 0;" *ngIf="listDisplay"></mat-divider>
-
-<div class="container" *ngIf="listDisplay">
-  <div class="row" dir="rtl">
-    <div class="col-lg-12 title">
-      <h1>مجموعه عناوین</h1>
-    </div>
-    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-      <a href="/learn/article/id">
-        <mat-card class="example-card">
-          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-          <mat-card-content>
-            <a class="little_desc">
-              The Shiba Inu is the smallest of the six original and
-            </a>
-          </mat-card-content>
-          <a href="/admin/{{Type}}/post/list/edit/1">
-            <button mat-mini-fab color="primary">
-              <mat-icon>edit</mat-icon>
-            </button>
-          </a>
-          <button mat-mini-fab color="warn" (click)="deletePost()">
-            <mat-icon>delete_forever</mat-icon>
-          </button>
-        </mat-card>
-      </a>
-    </div>
-
-    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-      <a href="/learn/article/id">
-        <mat-card class="example-card">
-          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-          <mat-card-content>
-            <a class="little_desc">
-              The Shiba Inu is the smallest of the six original and
-            </a>
-          </mat-card-content>
-          <a href="/admin/{{Type}}/post/list/edit/1">
-            <button mat-mini-fab color="primary">
-              <mat-icon>edit</mat-icon>
-            </button>
-          </a>
-          <button mat-mini-fab color="warn" (click)="deletePost()">
-            <mat-icon>delete_forever</mat-icon>
-          </button>
-        </mat-card>
-      </a>
-    </div>
-
-    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-      <a href="/learn/article/id">
-        <mat-card class="example-card">
-          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-          <mat-card-content>
-            <a class="little_desc">
-              The Shiba Inu is the smallest of the six original and
-            </a>
-          </mat-card-content>
-          <a href="/admin/{{Type}}/post/list/edit/1">
-            <button mat-mini-fab color="primary">
-              <mat-icon>edit</mat-icon>
-            </button>
-          </a>
-          <button mat-mini-fab color="warn" (click)="deletePost()">
-            <mat-icon>delete_forever</mat-icon>
-          </button>
-        </mat-card>
-      </a>
-    </div>
-
-    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-      <a href="/learn/article/id">
-        <mat-card class="example-card">
-          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-          <mat-card-content>
-            <a class="little_desc">
-              The Shiba Inu is the smallest of the six original and
-            </a>
-          </mat-card-content>
-          <a href="/admin/{{Type}}/post/list/edit/1">
-            <button mat-mini-fab color="primary">
-              <mat-icon>edit</mat-icon>
-            </button>
-          </a>
-          <button mat-mini-fab color="warn" (click)="deletePost()">
-            <mat-icon>delete_forever</mat-icon>
-          </button>
-        </mat-card>
-      </a>
-    </div>
-  </div>
-</div>
