--- a/src/app/modules/list-items/list-items.component.html
+++ b/src/app/modules/list-items/list-items.component.html
@@ -5,7 +5,7 @@
     <div class="col-lg-12 title">
       <h1>مجموعه عناوین</h1>
     </div>
-    <div class="col-lg-3 col-md-6 col-sm-6 col-12" *ngFor="let item of newsData">
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12" *ngFor="let item of editData">
       <mat-card class="example-card">
         <a href="/learn/article/{{item.id}}">
           <img mat-card-image [src]="item.image" alt="Photo of a Shiba Inu">
@@ -23,7 +23,7 @@
             <mat-icon>edit</mat-icon>
           </button>
         </a>
-        <button mat-mini-fab color="warn" title="حذف" (click)="deletePost(item.id)">
+        <button mat-mini-fab color="warn" title="حذف" (click)="deletePost(item)">
           <mat-icon>delete_forever</mat-icon>
         </button>
       </mat-card>
